--- a/.github/workflows/osv-scanner-scheduled.yml
+++ b/.github/workflows/osv-scanner-scheduled.yml
@@ -37,6 +37,7 @@ jobs:
           done
           versions="${versions}]"
           echo "versions='${versions}'" > $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
 
   run-scheduled-scan:
     needs: schedule-scan
@@ -51,5 +52,5 @@ jobs:
             --method POST \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/erlang/otp/actions/workflows/osv-scanner-scheduled.yml/dispatches \
+            /repos/${{ github.repository }}/actions/workflows/osv-scanner-scheduled.yml/dispatches \
             -f "ref=${{ matrix.type }}"
