--- a/.github/workflows/osv-scanner-scheduled.yml
+++ b/.github/workflows/osv-scanner-scheduled.yml
@@ -49,6 +49,7 @@ jobs:
       fail-fast: false
     permissions:
       actions: write
+    if: {{ hashFiles('.github/workflows/osv-scanner-scheduled.yaml') }}
     steps:
       - env:
           GH_TOKEN: ${{ github.token }}
